--- a/4pda sunsie.css
+++ b/4pda sunsie.css
@@ -1,5 +1,4 @@
-﻿@-moz-document domain("4pda.ru") {
-/* Forum */
+﻿/* Forum */
 body {
     background: black !important;
     background-image: url('https://raw.githubusercontent.com/LEKS2FAST/4PDA_Style_Sunsie/master/Wallpapers/wall1.jpg') !important;
@@ -7,6 +6,7 @@ body {
 	background-repeat: no-repeat !important;
     background-size: cover !important;
     color: #ffffff !important;
+    text-shadow: 2px 1px 1px black !important;
 }
 #logostrip {
     height: 145px;
@@ -17,12 +17,6 @@ body {
 	height: 150px !important;
 	padding-right: 124px !important;
 	width: 0 !important;
-}
-.row1[style="padding: 4px;"] a span, .postcolor a span, .signature a span, .borderwrap a span, .globalmesscontent a span {
-    display: inline-block !important;
-    text-decoration: none !important;
-    line-height: 0.95 !important;
-    border-bottom: 1px solid currentColor !important;
 }
 .row1[style="padding: 4px;"] a span:hover {
     opacity: 0.8 !important;
@@ -63,6 +57,7 @@ td.formbuttonrow, .pformstrip, .borderwrap p.formbuttonrow, .borderwrap p.formbu
 }
 a:link, a:visited, a:active {
     color: #FADF87 !important;
+    text-decoration: none !important;
 }
 a:hover {
     color: white !important;
@@ -77,7 +72,6 @@ a:hover {
     background: rgba(0,0,0,0.7) !important;
     padding: 7px !important;
     border-radius: 5px !important;
-    text-shadow: 1px 1px 1px black !important;
 }
 .pagelink, .pagelinklast, .pagecurrent, .minipagelink, .minipagelinklast {
     border: 0px solid #183797 !important;
@@ -87,7 +81,6 @@ a:hover {
 .pagelink, .pagelinklast {
 	background: transparent !important;
     color: white !important;
-    text-shadow: 1px 1px 1px #000000 !important;
 }
 .pagecurrent {
     background: #DC002A !important;
@@ -272,7 +265,6 @@ hr.sfr {
 }
 .desc {
     color: #fea !important;
-    text-shadow: 1px 1px 1px black !important;
 }
 .darkrow1 {
     background: #dc002a !important;
@@ -339,6 +331,15 @@ select:-webkit-autofill:focus {
 .ac_results {
     border: solid 1px #dc002a !important;
     background: rgba(0,0,0,0.7) !important;
+}
+#footer {
+    background: transparent !important;
+}
+.footer-panel, .footer-nav {
+    background: rgba(0,0,0,0.5) !important;
+}
+.footer-nav .f-note, .footer-panel {
+    color: #fadf87 !important;
 }
 
 /* UCP */
@@ -731,7 +732,7 @@ body > div > div > div > div > div > form > ul > li {
 }
 .u-note:after {
     background:#dc002a !important;
-    color: black !important;
+    color: #fadf87 !important;
 }
 .u-note {
     border-top: 1px solid #dc002a !important;
@@ -740,15 +741,6 @@ body > div > div > div > div > div > form > ul > li {
 .info-list .warn-btn {
     background: #dc002a !important;
     border-radius: 2px !important;
-}
-#footer {
-    background: transparent !important;
-}
-.footer-panel, .footer-nav {
-    background: rgba(0,0,0,0.5) !important;
-}
-.footer-nav .f-note, .footer-panel {
-    color: #fadf87 !important;
 }
 
 /* Nav */
@@ -820,6 +812,9 @@ body > div > div > div > div > div > form > ul > li {
 }
 .overlay-block .overlay-orange {
     background: #dc002a !important;
+}
+#nav a {
+    font-weight: bold !important;
 }
 
 /* QMS */
@@ -948,7 +943,7 @@ div div div div section, div#wrapper div div div div section {
     background: none !important;
 }
 .post {
-    background: rgba(0,0,0,0.6) !important;
+    background: rgba(0,0,0,0.75) !important;
     border: 1px solid #dc002a !important;
     border-radius: 8px !important;
 }
@@ -968,6 +963,7 @@ div div div div section, div#wrapper div div div div section {
 .post .btn-more {
     background: #f9ca55 !important;
     color: black !important;
+    text-shadow: none !important;
 }
 .post .v-panel .v-count, .product-detail .more-box .number, .product-detail .more-box .count-autor, .poll-list .slider .value, .v-panel .v-count {
     background: #dc002a !important;
@@ -977,6 +973,7 @@ div div div div section, div#wrapper div div div div section {
 }
 .testimonials-list, .comment-box .comment-list, .comment-box .comment-list .karma a, .comment-box .comment-list .karma [data-karma-act] {
     color: #d6d6d6 !important;
+    text-shadow: 2px 2px 1px black !important;
 }
 .container {
     border: 1px solid #dc002a !important;
@@ -1014,7 +1011,7 @@ div div div div section, div#wrapper div div div div section {
     border-bottom: 1px solid #dc002a !important;
 }
 .comment-box .comment-list .h-meta {
-    color: #2ECEC8 !important;
+    color: #fadf87 !important
 }
 .mlinks, .mlinks .mlscreenshots {
     border: 1px solid #dc002a !important;
@@ -1080,6 +1077,12 @@ body > div.wr-t > div > div {
 }
 .post-row-gray, .post-row {
     background: transparent !important;
+}
+.news-list p a {
+    color: #fff !important;
+}
+.post .list-post-title a, .post h2 a {
+    text-shadow: 2px 2px 1px black !important;
 }
 
 /* DevDB */
@@ -1527,5 +1530,4 @@ img[alt="Увеличить форму ответа"] {
     height: 22px !important;
     padding-right: 20px !important;
     width: 0 !important;
-}
 }
